Fixed destination (path) for newly ingested objects in existing nodes.